--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ body {
   background: #222;
   display: flex;
   flex-direction: column;
+  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace
 }
 #canvas {
   margin-left: 5px;
@@ -61,14 +62,16 @@ body {
   margin-top: 10px;
   width: 80px;
   height: 40px;
-  font-size: 15px;
+  font-size: 17px;
+  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace
 }
 #step {
   margin-left: 5px;
   margin-top: 10px;
   width: 80px;
   height: 40px;
-  font-size: 15px;
+  font-size: 17px;
+  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace
 }
 #log {
   margin-left: 15px;
@@ -76,7 +79,7 @@ body {
   margin-bottom: 10px;
   overflow-y: scroll;
   width: 100%;
-  font-size: 15px;
+  font-size: 18px;
   color: #FFF;
 }
     </style>
