--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
   height: 100vh;
   margin: 0;
 }
-#editor {
+#editor, #macro {
   margin: 5px 0 0 0;
   width: 100%;
   height: 100%;
@@ -47,6 +47,7 @@ body {
   height: 100%;
   border-left: 3px solid #141411;
   background: #222;
+  display: flex;
   flex-direction: column;
   font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace
 }
@@ -196,6 +197,8 @@ canvas {
       <ul>
         <li><a href="#editor">Editor</a></li>
         <li><a href="#canvas">Canvas</a></li>
+        <li><a href="#macro">Macro</a></li>
+        <li><a href="#docs">Document</a></li>
       </ul>
       <pre id="editor"></pre>
       <div id="canvas">
@@ -204,6 +207,8 @@ canvas {
         <button type="button" id="load">Load</button>
         <input type="file" id="file"></input>
       </div>
+      <pre id="macro"></pre>
+      <div id="docs"></div>
     </div>
     <div id="display">
       <span>
@@ -250,6 +255,10 @@ $(_=>{
   editor.setTheme("ace/theme/monokai");
   editor.setFontSize(20);
   editor.session.setMode("ace/mode/ex3");
+  var macroEditor = ace.edit("macro");
+  macroEditor.setTheme("ace/theme/monokai");
+  macroEditor.setFontSize(20);
+  macroEditor.session.setMode("ace/mode/ex3");
   function moveLine(ln){
     editor.gotoLine(ln,0,false);
   }
@@ -266,8 +275,8 @@ $(_=>{
       srcUpdate(content);
     },100);
   });
-  vim = _=>{editor.setKeyboardHandler("ace/keyboard/vim");localStorage.setItem('inputMethod',"vim");}
-  emacs = _=>{editor.setKeyboardHandler("ace/keyboard/emacs");localStorage.setItem('inputMethod',"emacs");}
+  vim = _=>{editor.setKeyboardHandler("ace/keyboard/vim");macroEditor.setKeyboardHandler("ace/keyboard/vim");localStorage.setItem('inputMethod',"vim");}
+  emacs = _=>{editor.setKeyboardHandler("ace/keyboard/emacs");macroEditor.setKeyboardHandler("ace/keyboard/emacs");localStorage.setItem('inputMethod',"emacs");}
   const im = localStorage.getItem('inputMethod');
   if(im){
     if(im=="vim")vim();
@@ -453,12 +462,18 @@ $(_=>{
       $("#screen")[0].className = "large";
       sizingBtn.textContent = "Small";
       smallScreen = false;
+      localStorage.setItem('sizing',"large");
     }else{
       $("#screen")[0].className = "small";
       sizingBtn.textContent = "Large";
       smallScreen = true;
+      localStorage.setItem('sizing',"small");
     }
   });
+  let sizeConf = localStorage.getItem('sizing');
+  if(sizeConf=="large"){
+    sizingBtn.click();
+  }
 });
     </script>
   </body>
