--- a/index.html
+++ b/index.html
@@ -280,7 +280,11 @@ canvas {
             <b>SLP</b>: 次のフレームになるまで待機します。
           </li>
         </ul>
+        現在 <b>TRX, TRY, BTN, SLP</b> が未実装。
         <h2>Macroの使い方</h2>
+        サンプル見たらだいたいわかると思う。
+        ちなみに左右の区切りは空白込みで " = " です。
+        <div style="height:50px"></div>
       </div>
     </div>
     <div id="display">
