Add : doc a little

--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@ canvas {
       <pre id="macro"></pre>
       <div id="docs">
         <h1>EX3+ Document</h1>
+        <h2>コレは何</h2>
+        情報実験第三でゲームが作りたくなったのでとりあえずシミュレータを作った。
+        <br>
+        JJ3Sは情報実験第三シミュレータの略です。
+        <br>
+        とりあえずExecuteを押してみよう。
         <h2>描画について</h2>
         描画できるものとしては、40×30のスプライトマップと5つの動的スプライトになります。
         <br>
@@ -284,6 +290,12 @@ canvas {
         <h2>Macroの使い方</h2>
         サンプル見たらだいたいわかると思う。
         ちなみに左右の区切りは空白込みで " = " です。
+        <h2>その他機能</h2>
+        <b>BREAK</b>と書くとそこにブレークポイントが仕込めます。
+        <br>
+        通常実行時にそこに引っかかると一時停止し、好きにステップ実行などができます。
+        <br>
+        条件付きブレークポイントとして<b>ASSERT</b>をそのうち実装したい。
         <div style="height:50px"></div>
       </div>
     </div>
