--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ canvas {
         <ul>
           <li>選択スプライトを描画したいスプライトに設定します。</li>
           <ul>
-            <li>ACをFFFFの状態で<b>SLX</b>した後に選択する動的スプライトの番号で<b>SLY</b>してください。</li>
+            <li>ACをFFFFの状態で<b>SLX</b>した後に選択する動的スプライトの番号(0~4)で<b>SLY</b>してください。</li>
           </ul>
           <li>描画したいスプライトIDを書き込みます。(<b>WRT</b>)</li>
           <li>(回転したい場合はその角度(0~3)を書き込みます。(<b>ROT</b>))</li>
@@ -296,6 +296,12 @@ canvas {
         通常実行時にそこに引っかかると一時停止し、好きにステップ実行などができます。
         <br>
         条件付きブレークポイントとして<b>ASSERT</b>をそのうち実装したい。
+        <h2>TODO</h2>
+        <ul>
+          <li>残りの命令の実装</li>
+          <li>ASSERTの実装</li>
+          <li>バックバッファの表示</li>
+        </ul>
         <div style="height:50px"></div>
       </div>
     </div>
