--- a/index.html
+++ b/index.html
@@ -296,6 +296,10 @@ canvas {
         通常実行時にそこに引っかかると一時停止し、好きにステップ実行などができます。
         <br>
         条件付きブレークポイントとして<b>ASSERT</b>をそのうち実装したい。
+        <br><br>
+        あと開発者コンソールで <b>vim();</b> って打つとVimキーバインドになります。
+        <br>
+        設定は自動保存なのでやめたいときはlocalStorageのそれっぽいのをふっ飛ばしてください。
         <h2>TODO</h2>
         <ul>
           <li>残りの命令の実装</li>
