--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ canvas {
             <b>SLP</b>: 次のフレームになるまで待機します。
           </li>
         </ul>
-        現在 <b>BTN, SLP</b> が未実装。
+        現在 <b>BTN</b> が未実装。
         <h2>Macroの使い方</h2>
         サンプル見たらだいたいわかると思う。
         ちなみに左右の区切りは空白込みで「 = 」です。
